--- a/views/nav.pug
+++ b/views/nav.pug
@@ -40,3 +40,4 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark: .container-fluid
 			li.nav-item: a.nav-link.active(aria-current='page' href='/oop') OOP
 			li.nav-item: a.nav-link.active(aria-current='page' href='/array') Array
 			li.nav-item: a.nav-link.active(aria-current='page' href='/object') Object
+			li.nav-item: a.nav-link.active(aria-current='page' href='/codeplay') Code Play
